模板调整